# cmake-training

./: README.md
cmake-docker-environment/: Dockerfile  docker-compose.yml
cmake-docker-environment/demos/consume-shared-library-windows/: CMakeLists.txt
cmake-docker-environment/demos/generate-library-windows/: CMakeLists.txt  greeting.h
cmake-docker-environment/lab-files/cmake-example/: CMakeLists.txt  greeting.cpp
cmake-docker-environment/lab-files/consume-shared-library/: CMakeLists.txt  main.cpp
cmake-docker-environment/lab-files/generate-library-windows/: CMakeLists.txt
cmake-docker-environment/lab-files/generate-shared-library/: CMakeLists.txt  greeting.cpp
cmake-docker-environment/lab-files/generate-static-library/: CMakeLists.txt
cmake-docker-environment/lab-files/make-example/: greeting.cpp
cmake-docker-environment/lab-files/subdirectory-example/: main.cpp
cmake-docker-environment/lab-files/targets-example/: CMakeLists.txt  main.cpp
cmake-docker-environment/lab-files/targets-example/firstDay/: firstDay.cpp
cmake-docker-environment/lab-files/targets-example/secondDay/: secondDay.cpp
cmake-docker-environment/lab-files/targets-example/thirdDay/: thirdDay.cpp
cmake-docker-environment/labs/consume-shared-library/: main.cpp  readme.md
cmake-docker-environment/labs/consume-shared-library-windows/: main.cpp
cmake-docker-environment/labs/consume-static-library/: CMakeLists.txt  main.cpp  readme.md
cmake-docker-environment/labs/generate-library/: CMakeLists.txt
cmake-docker-environment/labs/generate-library-windows/: eximlogic.h
(+15 files in other folders)
